Добавил проверки на существование директорий

--- a/classify_lenta_ru_texts_playbook.ipynb
+++ b/classify_lenta_ru_texts_playbook.ipynb
@@ -523,6 +523,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if not os.path.exists(os.path.join(CUR_DIR, 'tf_models')):\n",
+    "    os.makedirs(os.path.join(CUR_DIR, 'tf_models'))\n",
+    "\n",
     "# Максимальное количество используемух слов (по частоте)\n",
     "MAX_NB_WORDS = 100000\n",
     "# Максимальное количество слов в документе\n",
@@ -819,6 +822,8 @@
     "        output_dict=True\n",
     "    )\n",
     "\n",
+    "    if not os.path.exists(os.path.join(CUR_DIR, 'excel')):\n",
+    "        os.makedirs(os.path.join(CUR_DIR, 'excel'))\n",
     "    df_report = pd.DataFrame(report).transpose()\n",
     "    df_report.to_excel(\n",
     "        'excel/classification_report_lstm.xlsx',\n",
