--- a/recognize_speech.ipynb
+++ b/recognize_speech.ipynb
@@ -13,7 +13,8 @@
     "* Аудио для демонстрации взяты с открытого источника Russian Open Speech To Text (STT/ASR) Dataset  \n",
     "        https://www.kaggle.com/datasets/tapakah68/audio-dataset?resource=download&utm_source=pocket_mylist  \n",
     "* Перед началом работы необходимо клонировать git clone https://github.com/alphacep/vosk-api  \n",
-    "        или загрузить полную русскоязычную модель https://alphacephei.com/vosk/models  "
+    "        или загрузить полную русскоязычную модель https://alphacephei.com/vosk/models  \n",
+    "        и распаковать в каталог model"
    ]
   },
   {
