Добавлены плейбуки с выполненными ячейками для демонстрации

--- a/recognize_speech.ipynb
+++ b/recognize_speech.ipynb
@@ -33,10 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import display\n",
+    "# для аннотаций\n",
     "from typing import List\n",
     "# для работы с данными\n",
     "import pandas as pd\n",
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +158,15 @@
     "                #     print(\"Ошибка распознавания\" + str(e))\n",
     "\n",
     "\n",
-    "def recognize_with_vosk(file_list: list, sample_rate: int = SAMPLE_RATE) -> pd.DataFrame:\n",
+    "def recognize_with_vosk(file: str, sample_rate: int = SAMPLE_RATE) -> pd.DataFrame:\n",
     "    \"\"\"Транскрипция файлов из file_list и запись имени файла и его текста в pd.DataFrame\n",
     "\n",
-    "        - file_list (list) - список, из которого читаем файлы\n",
+    "        - file (str) - путь к файлу\n",
     "\n",
     "    Возвращает:\n",
     "        - transcribed (pd.DataFrame) - фрейм с именами файлов и их транскрипцией\n",
     "    \"\"\"\n",
+    "    # проверка на существование каталога модели\n",
     "    if not os.path.exists('model'):\n",
     "        print(\"Необходимо загрузить модель с: https://alphacephei.com/vosk/models\\\n",
     "            и распаковать как 'model' в текущую папку.\")\n",
@@ -174,30 +177,39 @@
     "        rec = KaldiRecognizer(model, sample_rate)\n",
     "        # dataframe для хранения транскрипции текста\n",
     "        transcribed = pd.DataFrame(columns=['audiofile_name', 'raw_text'])\n",
-    "        # проверка на существование каталога модели\n",
-    "\n",
-    "        for file in tqdm(file_list):\n",
-    "            print(file)\n",
-    "\n",
-    "            recognized_data = ''\n",
-    "            wave_audio_file = wave.open(file, \"rb\")\n",
+    "        print(file)\n",
+    "        last_n = False\n",
+    "        recognized_data = ''\n",
+    "        wave_audio_file = wave.open(file, \"rb\")\n",
+    "        while True:\n",
     "            data = wave_audio_file.readframes(wave_audio_file.getnframes())\n",
     "            if len(data) == 0:\n",
     "                break\n",
     "\n",
-    "            rec.AcceptWaveform(data)\n",
-    "            recognized_data = json.loads(rec.Result())[\"text\"]\n",
-    "            print(recognized_data)\n",
-    "            _, audiofile_name = os.path.split(file)\n",
+    "            if rec.AcceptWaveform(data):\n",
+    "                res = json.loads(rec.Result())\n",
+    "            # recognized_data = json.loads(rec.Result())[\"text\"]\n",
+    "                if res['text'] != '':\n",
+    "                    recognized_data += f\" {res['text']}\"\n",
+    "                    last_n = False\n",
+    "                elif not last_n:\n",
+    "                    recognized_data += '\\n'\n",
+    "                    last_n = True\n",
     "\n",
-    "            transcribed =\\\n",
-    "                transcribed.append(\n",
-    "                    {\n",
-    "                        'audiofile_name': audiofile_name,\n",
-    "                        'raw_text': recognized_data\n",
-    "                    },\n",
-    "                    ignore_index=True\n",
-    "                )\n",
+    "        res = json.loads(rec.FinalResult())\n",
+    "        recognized_data += f\" {res['text']}\"\n",
+    "\n",
+    "        print(recognized_data)\n",
+    "        _, audiofile_name = os.path.split(file)\n",
+    "\n",
+    "        transcribed =\\\n",
+    "            transcribed.append(\n",
+    "                {\n",
+    "                    'audiofile_name': audiofile_name,\n",
+    "                    'raw_text': recognized_data\n",
+    "                },\n",
+    "                ignore_index=True\n",
+    "            )\n",
     "    return transcribed\n",
     "\n",
     "\n",
@@ -223,9 +235,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Akulov.as\\AppData\\Local\\Temp\\ipykernel_11124\\385624108.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_sample_rates.append(\n",
+      "C:\\Users\\Akulov.as\\AppData\\Local\\Temp\\ipykernel_11124\\385624108.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_sample_rates.append(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             audiofile_name sample_rate\n",
+      "0  0003d952-f170-4af0-946f-35db983ac54a.wav       16000\n",
+      "1  0007b919-85dc-43f6-a1c8-80fdff3d0048.wav       16000\n",
+      "Google определил текст: легендарный католический Святой ставший основателем нищенствующие ордена францисканцев на первый взгляд является классическим шизофреником\n",
+      "Google определил текст: это антибактериальное действие является постоянным и устойчивым многократной стирки\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\GitHub\\doc_classifier\\audio\\0003d952-f170-4af0-946f-35db983ac54a.wav\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Akulov.as\\AppData\\Local\\Temp\\ipykernel_11124\\385624108.py:136: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  transcribed.append(\n",
+      " 50%|█████     | 1/2 [01:48<01:48, 108.56s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " легендарный католический святой ставший основателем нищенствующего ордена францисканцев на первый взгляд является классическим шизофреником\n",
+      "c:\\GitHub\\doc_classifier\\audio\\0007b919-85dc-43f6-a1c8-80fdff3d0048.wav\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Akulov.as\\AppData\\Local\\Temp\\ipykernel_11124\\385624108.py:136: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  transcribed.append(\n",
+      "100%|██████████| 2/2 [04:23<00:00, 131.84s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " это антибактериальное действие является постоянным и устойчивым к многократной стирке\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>audiofile_name</th>\n",
+       "      <th>raw_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0003d952-f170-4af0-946f-35db983ac54a.wav</td>\n",
+       "      <td>легендарный католический святой ставший основ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0007b919-85dc-43f6-a1c8-80fdff3d0048.wav</td>\n",
+       "      <td>это антибактериальное действие является посто...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             audiofile_name  \\\n",
+       "0  0003d952-f170-4af0-946f-35db983ac54a.wav   \n",
+       "1  0007b919-85dc-43f6-a1c8-80fdff3d0048.wav   \n",
+       "\n",
+       "                                            raw_text  \n",
+       "0   легендарный католический святой ставший основ...  \n",
+       "1   это антибактериальное действие является посто...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# смотрим sample rates\n",
     "df_samplerates = get_files_sample_rate(path_to_audio=PATH_TO_AUDIO)\n",
@@ -235,7 +376,11 @@
     "# создаем список wav файлов в каталоге audio\n",
     "list_of_wavs = create_list_of_wavs(PATH_TO_AUDIO)\n",
     "# транскрипция списка с помощью vosk\n",
-    "df_transcribed = recognize_with_vosk(list_of_wavs, SAMPLE_RATE)\n",
+    "df_transcribed = pd.DataFrame(columns=['audiofile_name', 'raw_text'])\n",
+    "for file in tqdm(list_of_wavs):\n",
+    "    df_transcribed = pd.concat([df_transcribed, recognize_with_vosk(file, SAMPLE_RATE)])\n",
+    "df_transcribed.reset_index(inplace=True, drop=True)\n",
+    "display(df_transcribed)\n",
     "# выгружаем результат\n",
     "df_transcribed.to_excel(r\"excel/transcribed.xlsx\")"
    ]
@@ -282,7 +427,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c8141671160d9657a3dfce3ee2a025bd1996971af838a4f7b057132f53ed5d5a"
+   "hash": "b880003d55d112efe60643614eb0687decbf38a024abab04dacfd5a9c97a3a7f"
   },
   "kernelspec": {
    "display_name": "Python 3.9.12 ('venv': venv)",
@@ -290,7 +435,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
