--- a/recognize_speech.ipynb
+++ b/recognize_speech.ipynb
@@ -162,7 +162,7 @@
     "    \"\"\"Транскрипция файлов из file_list и запись имени файла и его текста в pd.DataFrame\n",
     "\n",
     "        - file (str) - путь к файлу\n",
-    "\n",
+    "        - sample_rate (int) - частота дискретизации\n",
     "    Возвращает:\n",
     "        - transcribed (pd.DataFrame) - фрейм с именами файлов и их транскрипцией\n",
     "    \"\"\"\n",
@@ -427,7 +427,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b880003d55d112efe60643614eb0687decbf38a024abab04dacfd5a9c97a3a7f"
+   "hash": "c8141671160d9657a3dfce3ee2a025bd1996971af838a4f7b057132f53ed5d5a"
   },
   "kernelspec": {
    "display_name": "Python 3.9.12 ('venv': venv)",
