--- a/recognize_speech.ipynb
+++ b/recognize_speech.ipynb
@@ -368,6 +368,7 @@
     }
    ],
    "source": [
+    "# Pipeline\n",
     "# смотрим sample rates\n",
     "df_samplerates = get_files_sample_rate(path_to_audio=PATH_TO_AUDIO)\n",
     "print(df_samplerates)\n",
