Поменял индексы в примере токенизации текста, добавил clean_text в функцию get_tag

--- a/classify_lenta_ru_texts_playbook.ipynb
+++ b/classify_lenta_ru_texts_playbook.ipynb
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'моя', 'ж', 'раз', 'вот', 'тот', 'по', 'один', 'нет', 'ему', 'себе', 'сейчас', 'меня', 'надо', 'на', 'тем', 'или', 'какая', 'ну', 'между', 'как', 'всего', 'всех', 'если', 'что', 'этом', 'до', 'него', 'она', 'ведь', 'из', 'ничего', 'под', 'них', 'будет', 'больше', 'этот', 'нее', 'уже', 'во', 'от', 'без', 'вам', 'разве', 'их', 'ней', 'эти', 'было', 'при', 'чего', 'за', 'вдруг', 'то', 'они', 'им', 'мы', 'ни', 'будто', 'со', 'его', 'ей', 'здесь', 'нас', 'себя', 'ее', 'об', 'почти', 'сам', 'а', 'да', 'такой', 'иногда', 'кто', 'можно', 'эту', 'лучше', 'вы', 'ты', 'в', 'вас', 'бы', 'более', 'нибудь', 'того', 'хорошо', 'не', 'теперь', 'когда', 'этого', 'где', 'свою', 'потому', 'с', 'и', 'быть', 'тоже', 'конечно', 'хоть', 'два', 'всегда', 'через', 'был', 'куда', 'никогда', 'этой', 'он', 'так', 'чтоб', 'я', 'может', 'опять', 'нельзя', 'какой', 'много', 'же', 'но', 'только', 'все', 'уж', 'ним', 'про', 'были', 'мой', 'тогда', 'после', 'перед', 'тут', 'чтобы', 'зачем', 'другой', 'ли', 'мне', 'чуть', 'совсем', 'чем', 'даже', 'для', 'том', 'еще', 'к', 'есть', 'впрочем', 'о', 'тебя', 'у', 'всю', 'наконец', 'была', 'потом', 'над', 'три', 'там'}\n"
+      "{'кто', 'же', 'где', 'ни', 'он', 'ведь', 'всего', 'там', 'его', 'все', 'мой', 'другой', 'чтоб', 'того', 'а', 'тогда', 'были', 'чуть', 'еще', 'надо', 'всех', 'эту', 'много', 'была', 'этот', 'тоже', 'всю', 'чего', 'сам', 'него', 'будет', 'ты', 'этого', 'через', 'них', 'более', 'теперь', 'нибудь', 'так', 'без', 'после', 'перед', 'такой', 'в', 'себя', 'потому', 'о', 'один', 'какая', 'моя', 'как', 'тем', 'больше', 'иногда', 'этом', 'ему', 'тебя', 'лучше', 'всегда', 'вдруг', 'почти', 'уже', 'или', 'под', 'ж', 'ей', 'хорошо', 'конечно', 'том', 'меня', 'над', 'от', 'не', 'свою', 'здесь', 'разве', 'быть', 'сейчас', 'два', 'раз', 'то', 'им', 'этой', 'между', 'нас', 'по', 'и', 'уж', 'нельзя', 'да', 'ну', 'тут', 'может', 'у', 'что', 'до', 'я', 'нее', 'зачем', 'было', 'за', 'впрочем', 'к', 'про', 'ним', 'совсем', 'можно', 'об', 'куда', 'ли', 'мы', 'во', 'с', 'когда', 'мне', 'если', 'будто', 'при', 'со', 'вас', 'из', 'три', 'они', 'никогда', 'даже', 'какой', 'чем', 'для', 'себе', 'ничего', 'нет', 'наконец', 'их', 'вот', 'вы', 'вам', 'ней', 'тот', 'на', 'но', 'чтобы', 'потом', 'эти', 'был', 'она', 'есть', 'хоть', 'бы', 'ее', 'опять', 'только'}\n"
      ]
     }
    ],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -591,32 +591,26 @@
      "output_type": "stream",
      "text": [
       "Размер тензора с векторами документов: (157723, 200)\n",
-      "Предлжение: режиссер сэм мендес снявший 007 координаты 'скайфолл' станет исполнительным продюсером сериала penny dreadful. передает deadline объявил глава кабельного канала showtime network дэвид невинс. производством проекта заниматься компания neal street productions которая принадлежит мендесу. помимо продюсировать сериал будут джон логан сценарист 007 координаты 'скайфолл' пиппа харрис - партнер мендеса nsp. deadline отмечает логан также работать сценарием сериала. глава showtime также выразил надежду мендес непосредственно руководить съемками сериала однако твердой договоренности этому вопросу пока нет. penny dreadful описывается психосексуальный хоррор действие которого разворачиваться лондоне xix века. героями сериала станут такие известные персонажи дракула доктор франкенштейн чудовище также дориан грей. дэвид невинс пообещал телешоу скорее реалистичным психологически достоверным выдержанным стиле фильма белой лугоши речь идет классической экранизации дракулы снятой 1931 году . пишет dreadline съемки должны начаться лондоне второй половине 2013 года. 007 координаты 'скайфолл' является последним сегодняшний момент фильмом который снял оскароносец сэм мендес. последняя часть бондианы вышла прокат конце октября. вскоре кинолента признана самым финансово успешным фильмом агента 007 истории франшизы - конце декабря касса превысила миллиард долларов.\n",
+      "Предлжение: фильм зака снайдера супермене бэтмене сниматься детройте штате мичиган пишет the wrap. компания warner bros. приняла такое решение связи финансовыми льготами предложенными штатом. предполагается создатели картины потратят мичигане около 130 миллионов долларов сша. власти штата обещают warner bros. дотацию размере 35 миллионов долларов. съемки создадут дополнительные рабочие места которые будут предоставлены 400 жителям мичигана. нового фильма снайдера пока официального названия. картина является сиквелом «человеку стали» съемки которого проходили преимущественно иллинойсе канаде. «человек стали» вышел экраны июне 2013 года заработал прокате 650 миллионов долларов сша бюджете 225 миллионов долларов. второй части супермену предстоит встретиться бэтменом объявлено июле 2013-го проходившем сан-диего фестивале «комик-кон» месяце детройт подал заявление собственном банкротстве . первом фильме роль супермена исполнять генри кавилл. августе стало известно роль бэтмена компания warner bros. назначила бена аффлека. съемки продолжения «человека стали» начнутся первом квартале 2014 года. премьера фильма запланирована середину июля 2015-го.\n",
       "Токенизированное предложение: [    0     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0   636 13477 29994\n",
-      " 15608 20365 13275   385 17255  5924  1088    55  7092   454    30 37535\n",
-      "  2143 18579 17915  2064  6695   341  1637   143  3261 32103    65  1332\n",
-      "   358 39920  2054    38   974 38439  6503 20365 13275 92085 13773  6158\n",
-      " 52413  7092   205 38439     4   561 13876  1088    30 18579     4   559\n",
-      "  1944 29994  3588 12143 21188  1088    19 40441  2672   519  1309    98\n",
-      "   875 22976 21078  1119   128 25563  1832  7834  2107 11891  1088  2365\n",
-      "   333  5454 10227  5606 47421     4 25333  2064   735  7157  1421 56587\n",
-      " 34354 92086  7361   365 13098   337   287 14452  9461 31764 25759     5\n",
-      "   151  1822   145  5905  1832   261  3290    66     2 20365 13275    46\n",
-      "  1726  2035   187  3275    15  2736 13477 29994  3208   181 18488  1293\n",
-      "  1547   161    70  1190 32104  5099   635  8809 12762  3275  5070 20365\n",
-      "   443  4398   161    80 46671  7065  2775    22]\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0   348 33712 39978 70277 27808 10752 36295  1548 16134   151    39\n",
+      " 19601   143  5545  6656  1489   340    56   108 11044 39519 68476 29268\n",
+      "  1056  3554   778 20637 46000    36  3353    43    22     8    52   946\n",
+      " 10673  5545  6656   517   590    43    22  1822 11075  1751  5002   630\n",
+      "    14    38 14911   829  2914 49920   386   365 39978    98  1792  4629\n",
+      "  1101    46 29737 92270 21194  1822   128  3945  4481 52572  5938  5296\n",
+      " 21194   723  2114   523    66     2  3852  3395 12589    43    22     8\n",
+      "  3559  5460    43    22   261   279  2149  3506  2965   525    66   150\n",
+      " 28528  2342  6532  3433  3958 39520  1465   288  9637  9834   546   866\n",
+      "   356 14781  5007 11291 38500   565    92   132   356 18971   143  5545\n",
+      "  6656 25019 20127 34355  1822  6459 27612 21194  5414   546  1435    35\n",
+      "     2   689   365  5017 20965    54    45   150]\n",
       "Размер тензора с векторами классов: (157723, 10)\n",
-      "One-hot encoded классы: [[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n"
+      "One-hot encoded класс Y[0] = array([0, 0, 0, 0, 1, 0, 0, 0, 0, 0], dtype=uint8)\n"
      ]
     }
    ],
@@ -625,13 +619,14 @@
     "X = pad_sequences(X, maxlen=MAX_SEQUENCE_LENGTH)\n",
     "print('Размер тензора с векторами документов:', X.shape)\n",
     "\n",
-    "print(f\"Предлжение: {df_news['text_cleaned'].values[1]}\")\n",
-    "print(f\"Токенизированное предложение: {X[1]}\")\n",
+    "print(f\"Предлжение: {df_news['text_cleaned'].values[1024]}\")\n",
+    "print(f\"Токенизированное предложение: {X[1024]}\")\n",
     "# Применяем one-hot encoding, получаем разреженную матрицу из n колонок,\n",
     "# где n - количество классов, где во всех позициях нули, кроме позиции класса - 1\n",
     "Y = pd.get_dummies(df_news['tag_idx']).values\n",
     "print('Размер тензора с векторами классов:', Y.shape)\n",
-    "print(f\"One-hot encoded классы: {Y}\")"
+    "# print(f\"One-hot encoded классы: {Y}\")\n",
+    "print(f'One-hot encoded класс {Y[0] = }')"
    ]
   },
   {
@@ -1093,7 +1088,7 @@
     "    Аргументы:\n",
     "        - input_text (list[str]) - Поданный текст для определения тега\n",
     "    \"\"\"\n",
-    "\n",
+    "    input_text = clean_text(input_text).replace(r'\\n', '')\n",
     "    sequence = tokenizer.texts_to_sequences(input_text)\n",
     "    padded_sequence = pad_sequences(sequence, maxlen=MAX_SEQUENCE_LENGTH)\n",
     "    pred = lstm_model.predict(padded_sequence)\n",
